2000-04-03  Ettore Perazzoli  <ettore@helixcode.com>

	* gtkhtml.c
	(init): Initialize `scroll_timeout_id' to zero.
	(destroy): If `scroll_timeout_id' is nonzero, remove timeout of
	which it is the ID.
	(scroll_timeout_cb): New function, handling the scroll timeout.
	(setup_scroll_timeout): New function to set up the scroll timeout.
	(remove_scroll_timeout): New function to remove the scroll
	timeout.
	(motion_notify_event): If we are selecting and the mouse gets
	outside the window, set up the scroll timeout so that we allow
	scrolling during selection.
	(button_release_event): Remove the scroll timeout.
	(gtk_html_private_calc_scrollbars): Set upper limits for the
	adjustments as well.

	* gtkhtml.h: New member `scroll_timeout_id'.

2000-04-03  Radek Doulik  <rodo@helixcode.com>

	* htmltextmaster.c (calc_min_width): rewritten calculating of
	min_width, instead of calling html_painter_calc_text_width for
	each char call it for whole words

2000-04-03  Ettore Perazzoli  <ettore@helixcode.com>

	* gtkhtml.c
	(button_press_event): Clean up and re-indent a bit.

	* htmlengine.c
	(parse_i): Fix braino: make sure `valign' is set to
	`HTML_ALIGN_BOTTOM' if initially `HTML_VALIGN_NONE".

2000-04-03  Ettore Perazzoli  <ettore@helixcode.com>

	* htmltextmaster.c
	(select_range): Make sure we don't select beyond the end of the
	text.

	* gtkhtml.c
	(button_release_event): Become owner of the X11 selection if we
	were doing a mouse selection.
	(selection_get): New function.
	(selection_clear_event): New function.
	(class_init): Install them as implementation of the corresponding
	GtkWidget virtual methods.
	(init): Add "STRING" selection targets to the widget.

	* htmlengine.c
	(html_engine_goto_anchor): New param @anchor.  Made non-static,
	cleaned up a bit.
	(html_engine_get_selection_string): New function.
	
	* gtkhtml.c
	(gtk_html_jump_to_anchor): New function.

	* htmlclueflow.c
	(append_selection_string): New function,